# ics_attack_surfaces

./: .gitignore  LICENSE  README.md  ROADMAP.md  SECURITY.md  ics_attack_surface_modeler_proposal.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: README.md  citation_verification.md  cve_snapshot.json  mapping_rules.yaml  metro_signaling.yaml  reference_architecture.yaml  risk_rubric.md  threat_trends.yaml  water_treatment.yaml
examples/metro_signaling/: attack_navigator_layer.json  briefing.md
examples/water_treatment/: attack_navigator_layer.json  briefing.md
experiments/: ABLATION_FOLLOWUP.md  CRITERION_RESULTS.md  RESULTS.md  SCALE.md  ablation_followup.py  criterion_validity.py  scale.py  ukraine_2015.yaml  validity.py
ics_modeler/: __init__.py  assets.py  data_sources.py  frameworks.py  mapping.py  pipeline.py  report.py  scoring.py  trends.py
notebooks/: demo.ipynb
scripts/: build_cve_snapshot.py  harvest_trends.py
src/: assets.py  data_sources.py  mapping.py  pipeline.py  report.py  scoring.py  trends.py
tests/: test_assets.py  test_frameworks.py  test_report.py  test_scoring.py  test_segmentation.py  test_validity.py
