[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ics-attack-surface-modeler"
version = "0.1.0"
description = "Threat modeling and vulnerability prioritization for ICS/SCADA reference architectures"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "networkx>=3.2,<4",
    "pyyaml>=6.0,<7",
    "requests>=2.31,<3",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",   # 9.0.3 fixes CVE-2025-71176
    "ruff>=0.5,<1",
    "mypy>=1.10,<3",
    "pip-audit>=2.7,<3",
]

[project.scripts]
ics-modeler = "ics_modeler.pipeline:main"

[tool.setuptools]
packages = ["ics_modeler"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E741"]  # ambiguous var name (l/I used for level helpers)

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true              # third-party libs without stubs (not-found)
disable_error_code = ["import-untyped"]    # ...and those installed but unstubbed (yaml, etc.)
check_untyped_defs = false                 # this is intentionally a lightly-typed codebase
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
